# peekpe

./: Cargo.toml  install.ps1
.cargo/: config.toml
.github/workflows/: release.yml
install/: install.sh
install/binaries/: peekpe
src/: app.rs  main.rs  pe.rs  tui.rs  ui.rs
src/pe/: flags.rs  parser.rs  reader.rs
